# KG_MAG

./: CMakeLists.txt  application.cpp  application.hpp  application_manual.cpp  application_manual.h  compile.cpp  main.cpp
modules/affine_transform_2d/: affine_transform_2d.cpp  affine_transform_2d.hpp
modules/affine_transform_3d/: affine_transform_3d.cpp  affine_transform_3d.hpp
modules/application_2d/: application_2d.cpp  application_2d.hpp
modules/application_3d/: application_3d.cpp  application_3d.hpp
modules/application_manual3d/: application_manual3d.cpp  application_manual3d.hpp
modules/camera_2d/: camera_2d.cpp  camera_2d.hpp
modules/camera_3d/: camera_3d.cpp  camera_3d.hpp
modules/model_2d/: model_2d.cpp  model_2d.hpp
modules/model_3d/: model_3d.cpp  model_3d.hpp
modules/scene_2d/: scene_2d.hpp
modules/scene_3d/: scene_3d.hpp
modules/screen_3d/: screen_3d.cpp  screen_3d.hpp
modules/view_2d/: view_2d.cpp  view_2d.hpp
modules/view_3d/: view_3d.cpp  view_3d.hpp
modules/vk_boilerplate/: boilerplate.cpp  boilerplate.hpp
shaders/: blank_shader_3d.frag  line_shader.vert  line_shader_3d.frag  line_shader_3d.vert
